app/resources/css/components/action-panel.css
.action-panel {
    display: flex;
    padding: var(--space);
    flex-direction: column;
    align-items: start;

    border-radius: 4px;
    background-color: var(--gray-lightest);
}

.action-panel__action {
    flex-shrink: 0;
    margin-top: var(--space-sm);
}

@media screen and (min-width: 540px) {
    .action-panel {
        flex-direction: row;
        align-items: center;
        margin-top: 0;
        margin-left: var(--space-sm);
    }
}

